# async-stream

./: .gitignore  pyproject.toml
asyncstream/: __init__.py  async_file_obj.py  async_reader.py  async_writer.py
asyncstream/codecs/: __init__.py  gzip_codec.py  none_codec.py  snappy_codec.py  zstd_codec.py
examples/: simple_compress_gzip.py  simple_compress_gzip_with_aiofiles.py  simple_conversion_gzip_to_snappy.py  simple_uncompress_bzip2_from_s3.py
tests/: test_open_read.py  test_open_write.py  test_readers.py  test_utils.py  test_writers.py
